@@ -26,10 +26,8 @@ __revision__ = "$Revision$"
 #--------------------------------------------------------------------------#
 # Dependancies
 import wx.stc as stc
-import htmlcomp
-import pycomp
-import simplecomp
 
+# TODO: Make dynamic load mechanism and manager for completer classes.
 #--------------------------------------------------------------------------#
 
 class AutoCompService(object):
@@ -39,107 +37,27 @@ class AutoCompService(object):
     are loaded from external modules on request.
 
     """
-    def __init__(self, parent):
+    def __init__(self):
         """Initializes the autocompletion service
         @param parent: parent of this service object
 
         """
         object.__init__(self)
 
-        # Attributes
-        self._buffer = parent
-        self._completer = None
-        self._simpleCompleter = simplecomp.Completer(self._buffer)
-
-    def GetAutoCompAfter(self):
-        """Should the text insterted by the completer be inserted after the
-        cursor.
-        @return: bool
-
-        """
-        comp = self._completer or self._simpleCompleter
-        return comp.GetAutoCompAfter()
-
-    def GetAutoCompKeys(self):
-        """Returns the list of key codes for activating the
-        autocompletion.
-        @return: list of characters used for activating autocomp
-
-        """
-        comp = self._completer or self._simpleCompleter
-        return comp.GetAutoCompKeys()
-
-    def IsAutoCompEvent(self, evt):
-        comp = self._completer or self._simpleCompleter
-        return comp.IsAutoCompEvent(evt)
-
-    def GetAutoCompList(self, command):
-        """Retrieves the sorted autocomplete list for a command
-        @param command: command string to do lookup on
-
-        """
-        if self._completer:
-            rlist = self._completer.GetAutoCompList(command)
-        else:
-            rlist = self._simpleCompleter.GetAutoCompList(command)
-            rlist = sorted(list(set(rlist)))
-
-        return rlist
-
-    def GetAutoCompStops(self):
-        """Returns a string of characters that should cancel
-        the autocompletion lookup.
-        @return: string of characters that will hide the autocomp/calltip
-
-        """
-        comp = self._completer or self._simpleCompleter
-        return comp.GetAutoCompStops()
-
-    def GetAutoCompFillups(self):
-        comp = self._completer or self._simpleCompleter
-        return comp.GetAutoCompFillups()
-
-    def GetCallTip(self, command):
-        """Returns the calltip string for a command
-        @param command: command to get callip for
-
-        """
-        comp = self._completer or self._simpleCompleter
-        return comp.GetCallTip(command)
-
-    def GetCallTipKeys(self):
-        """Returns the list of keys to activate a calltip on
-        @return: list of calltip activation keys
-
-        """
-        comp = self._completer or self._simpleCompleter
-        return comp.GetCallTipKeys()
-
-    def GetCallTipCancel(self):
-        """Get the list of key codes that should stop a calltip"""
-        comp = self._completer or self._simpleCompleter
-        return comp.GetCallTipCancel()
-
-    def IsCallTipEvent(self, evt):
-        comp = self._completer or self._simpleCompleter
-        return comp.IsCallTipEvent(evt)
-
-    def GetIgnoreCase(self):
-        """Are commands case sensitive or not
-        @return: whether case is ignored or not by lookup
-
-        """
-        comp = self._completer or self._simpleCompleter
-        return not comp.GetCaseSensitive()
-
-    def LoadCompProvider(self, lex_value):
-        """Loads a specified completion provider by stc_lex value
-        @param lex_value: lexer id to get autocomp service for
-
-        """
+    @staticmethod
+    def GetCompleter(buff):
+        lex_value = buff.GetLexer()
         if lex_value == stc.STC_LEX_PYTHON:
-            self._completer = pycomp.Completer(self._buffer)
+            import pycomp
+            completer = pycomp.Completer(buff)
         elif lex_value in (stc.STC_LEX_HTML, stc.STC_LEX_XML):
-            self._completer = htmlcomp.Completer(self._buffer)
+            import htmlcomp
+            completer = htmlcomp.Completer(buff)
+        elif lex_value == stc.STC_LEX_CSS:
+            import csscomp
+            completer = csscomp.Completer(buff)
         else:
-            self._completer = None
+            import simplecomp
+            completer = simplecomp.Completer(buff)
+
+        return completer
